@@ -196,7 +196,13 @@
         <default>50, 50, 50, 50, 50, 50, 50, 50, 50, 50</default>
     </entry>
 </group>
-
+<group name="Cover Manager">
+    <entry key="Amazon Locale" type="String">
+        <label>Amazon locale for cover retrieval</label>
+        <whatsthis>Determines which Amazon server cover images should be retrieved from.</whatsthis>
+        <default>com</default>
+    </entry>
+</group>
 <group name="OSD">
     <entry key="Osd Enabled" type="Bool">
         <label>Use On-Screen Display</label>
@@ -377,29 +383,29 @@
 
 <group name="MySql">
     <entry key="MySqlHost" type="String">
-			<label>Host</label>
-			<whatsthis>The host MySql server is running on</whatsthis>
-			<default>localhost</default>
-		</entry>
-		<entry key="MySqlPort" type="Int">
-			<label>Port</label>
-			<whatsthis>The port MySql server is listening</whatsthis>
-			<default>3306</default>
-		</entry>
-		<entry key="MySqlDbName" type="String">
-			<label>Database name</label>
-			<whatsthis>The database's name</whatsthis>
-			<default>amarok</default>
-		</entry>
-		<entry key="MySqlUser" type="String">
-			<label>User</label>
-			<whatsthis>The user's name to use for connecting MySql</whatsthis>
-			<default/>
-		</entry>
-		<entry key="MySqlPassword" type="String">
-			<label>Password</label>
-			<whatsthis>The user's password</whatsthis>
-			<default/>
-		</entry>
+            <label>Host</label>
+            <whatsthis>The host MySql server is running on</whatsthis>
+            <default>localhost</default>
+        </entry>
+        <entry key="MySqlPort" type="Int">
+            <label>Port</label>
+            <whatsthis>The port MySql server is listening</whatsthis>
+            <default>3306</default>
+        </entry>
+        <entry key="MySqlDbName" type="String">
+            <label>Database name</label>
+            <whatsthis>The database's name</whatsthis>
+            <default>amarok</default>
+        </entry>
+        <entry key="MySqlUser" type="String">
+            <label>User</label>
+            <whatsthis>The user's name to use for connecting MySql</whatsthis>
+            <default/>
+        </entry>
+        <entry key="MySqlPassword" type="String">
+            <label>Password</label>
+            <whatsthis>The user's password</whatsthis>
+            <default/>
+        </entry>
 </group>
 </kcfg>
