@@ -8,6 +8,7 @@
 #include <qobject.h>     //baseclass
 #include <qimage.h>     //baseclass
 #include <qstring.h>     //stack alloc
+#include <kdebug.h>
 
 namespace KIO {
     class Job;
@@ -25,6 +26,7 @@ class CoverFetcher : public QObject
         ~CoverFetcher();
 
         void setLicense( const QString& license ) { m_license = license; }
+        void setLocale( const QString& locale );
         void getCover( const QString& artist, const QString& album, const QString& saveas, QueryMode mode = lite, bool noedit = false, int size = 2, bool albumonly = false );
 
     signals:
@@ -41,6 +43,7 @@ class CoverFetcher : public QObject
         void saveCover( const QImage& image );
     private:
         static const uint BUFFER_SIZE = 2000000; // 2mb
+        static QString m_locale;
 
         QString m_license;
         QString m_xmlDocument;
@@ -59,6 +62,6 @@ class CoverFetcher : public QObject
         bool m_noedit;
         bool m_albumonly;
 };
-
+QString CoverFetcher::m_locale = QString("com");
 
 #endif /* AMAROK_COVERFETCHER_H */
